kustomize/policy1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitops-demo
  namespace: policy-generator-e2e
  labels:
    app: gitops-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitops-demo
  template:
    metadata:
      labels:
        app: gitops-demo
    spec:
      containers:
      - name: gitops-demo
        ports:
        - containerPort: 8080
        image: quay.io/centos7/httpd-24-centos7:2.4
