kustomize/policy1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-demo
  namespace: policy-generator-e2e
  labels:
    app: gitops-demo
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: gitops-demo
